--- a/index.html
+++ b/index.html
@@ -3,13 +3,83 @@
 <!DOCTYPE htm1> <!-- HTML5 문서임을 선언, 대소문자 구분없이 정의가능 -->
 <html lang="en"> <!-- 루트 요소 -->
 <head> <!-- HTML의 meta정보를 포함한다 -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>배고파.</title> <!-- HTML 페이지의 제목, 브라우저 상단의 웹페이지 탭에 제목으로 노출 -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>배고파</title> <!-- 제목 브라우저 상단의 제목 -->
 </head>
-<body> <!-- HTML문서에서 실질적으로 보이는 영역을 정의하는 구간 -->
-       <!-- 이미지, 글, 링크, 테이블, 동영상 등등 -->
-     안녕하세요
-     
-</body>
+<body>  <!-- HTML문서에서 실질적으로 보이는 영역을 정의하는 구간 이미지, 글, 링크, 테이블, 동영상 등등
+        코드 작성시 엔터를 눌러 줄바꿈을 시도했음에도 불구하고 실행화면에는 한줄로 연결된 채 나온다 -->
+        <!-- <br> 태그는 줄바꿈 기능이 있다 -->
+        <!-- <p> 태그는 단락을 바꾸는 기능이 있다 block이라는 속성때문에 <br>를 쓰지않아도 줄바꿈이 가능하다-->
+        <img src="image/KakaoTalk_20250221_161912461.png" width="150px">
+        <input value="검색">
+        <div>
+            <img src="image/KakaoTalk_20250221_161912360.jpg" width="50px">
+            <div>
+                <h2>half_bottle</h2>
+                <button>프로필 편집</button>
+            </div>
+        </div>
+        <div>
+            <p>
+                <strong>반병현 (Byunghyun Ban)</strong><br>
+                저자<br/>
+            </p>
+                <a href="https://needleworm.github.io">needleworm.github.io</a>
+            </p>
+        </div>
+        <div>
+                <div>
+                    <div>
+                        <img src="image/hl1.jpg" height="35px"> 
+                    </div>
+                    <div>
+                      😍
+                    </div>
+                </div>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <img src="image/hl2.jpg" height="35px">
+                </div>
+                <div>
+                    😂
+                </div>
+            </div>
+
+        </div>
+        <div>
+                <div>
+                    게시물<br>
+                    133
+                </div> 
+                <div>   
+                    팔로워<br>
+                    411
+                </div>
+                <div>
+                    팔로우<br>
+                    189
+                </div>
+        </div>
+        <div>아이콘이 들어갈 자리</div>
+            <div>
+                <!-- 부모 너비의 32%값이 지정이된다
+                퍼센트로 지정된 값은 화면 크기에 따라 유동적으로 바뀐다
+                창 크기의 변화에 맞춰 그때그때 화면의 정보나 크기가 함께
+                바뀌는 웹 페이지를 반응형 웹이라고 한다 -->
+                <img src="image/1.jpg" width="32%">
+                <img src="image/2.jpg" width="32%">
+                <img src="image/3.jpg" width="32%">
+                <img src="image/4.jpg" width="32%">
+                <img src="image/5.jpg" width="32%">
+                <img src="image/6.jpg" width="32%">
+                <img src="image/7.jpg" width="32%">
+                <img src="image/8.jpg" width="32%">
+                <img src="image/9.jpg" width="32%">
+            </div>
+        <div>게시물 썸네일이 들어갈 자리</div>
+        
+</body> 
 </html>
