--- a/div.html
+++ b/div.html
@@ -14,6 +14,12 @@
             <!-- 안에 들어갈 수 있는 정보는 텍스트나 이미지일 수도 있고 태그일 수도 있다 -->
             정보1
             정보2
+            포장이사
+            그릇
+            접시
+            쟁반
+            보자기
+            박스
         </div>
 </body>
 </html>
