--- a/input.html
+++ b/input.html
@@ -37,6 +37,7 @@
        <input type="radio" name="food"/>중식<br>
        <input type="radio" name="food"/>중식<br>
        <input type="radio" name="food" checked/>중식<br>
+       <input
     </p>
     <p>
         슬라이더로 값을 선택하는 range<br>
