--- a/img.html
+++ b/img.html
@@ -20,5 +20,12 @@
 
      <!-- px(pixel)은 사각형의 점으로, 비트맵 방식의 디지털 이미지를
       구성하는 가장 작은 단위 -->
+
+     <!-- 절대경로 : 특정문서 페이지 또는 이미지 등 자원에 접근할 수 있는 전체 URL
+          -photo.png파일이 /wed/public/img/photo.png에 있다면 
+          <a href=/wed/public/img/photo.png> 다 써라
+          
+          상대경로 : 근데 내가 현재 작업하고 있는 파일의 위치가 /web/public라면
+          <a href="/img/photo.png"> 나머지만 써라 -->
 </body>
 </html>
