--- a/CSS/classTest.html
+++ b/CSS/classTest.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         h2{color:aquamarine}
-        span{color:red;}
+        span{color:rgb(45, 158, 73);}
         div.box h2{color:black}
 
     </style>
@@ -16,7 +16,7 @@
 <body>
     <h2>클래스 <span>연습</span>중</h2>
     <h1>클래스 연습중이라고!</h1>
-    <h2>클래스 <span>연습</span>중</h2>
+    <h2>클래스 <span>연습중</span>니서핧나ㅓㅁ후허</h2>
     <div class="box">
         <h2>클래스 연습중3</h2>
     </div>
